[package]
name = "NtHiM"
version = "0.0.4"
authors = ["Binit Ghimire <thebinitghimire@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Now, the Host is Mine! - Super Fast Sub-domain Takeover Detection!"
homepage = "https://whoisbinit.me/NtHiM/"
documentation = "https://github.com/TheBinitGhimire/NtHiM/"
repository = "https://github.com/TheBinitGhimire/NtHiM/"
readme = "README.md"
keywords = ["host-takeover", "subdomain-takeover", "pentesting", "bug-bounty", "red-teaming"]
exclude = ["docs/*", "_config.yml"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "3.0.0-beta.2"
futures = "0.3.12"
reqwest = "0.10.0"
serde = "1.0.122"
serde_derive = "1.0.122"
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }