[package]
name = "NtHiM"
version = "0.1.1"
authors = ["Binit Ghimire <thebinitghimire@gmail.com>", "Captain Nick Lucifer* <naryal2580@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Now, the Host is Mine! - Super Fast Sub-domain Takeover Detection!"
homepage = "https://github.com/TheBinitGhimire/NtHiM/"
documentation = "https://github.com/TheBinitGhimire/NtHiM/"
repository = "https://github.com/TheBinitGhimire/NtHiM/"
readme = "README.md"
keywords = ["host-takeover", "subdomain-takeover", "pentesting", "bug-bounty", "red-teaming"]
exclude = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "3.0.0-beta.2"
futures = "0.3.12"
reqwest = {version = "0.10.0", features = ["blocking"]}
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.4"
platform-dirs = "0.3.0"
