[package]
name = "NtHiM"
version = "0.1.3"
authors = ["Binit Ghimire <thebinitghimire@gmail.com>", "Captain Nick Lucifer* <naryal2580@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Now, the Host is Mine! - Super Fast Sub-domain Takeover Detection!"
homepage = "https://github.com/TheBinitGhimire/NtHiM/"
documentation = "https://github.com/TheBinitGhimire/NtHiM/"
repository = "https://github.com/TheBinitGhimire/NtHiM/"
readme = "README.md"
keywords = ["host-takeover", "subdomain-takeover", "pentesting", "bug-bounty", "red-teaming"]
exclude = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ansi_term = "0.12.1"
clap = "3.0.0-beta.2"
futures = { version = "0.3.15" }
reqwest = { version = "0.10.0", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
platform-dirs = "0.3.0"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false